--- a/pkg/swagger/swagger.html
+++ b/pkg/swagger/swagger.html
@@ -4,35 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ .Title }}</title>
-    <link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css" >
-    <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" type="text/css" href="https://petstore.swagger.io/swagger-ui.css">
+    <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-32x32.png" sizes="32x32"/>
+    <link rel="icon" type="image/png" href="https://petstore.swagger.io/favicon-16x16.png" sizes="16x16"/>
     <style>
-        html
-        {
+        html {
             box-sizing: border-box;
             overflow: -moz-scrollbars-vertical;
             overflow-y: scroll;
         }
+
         *,
         *:before,
-        *:after
-        {
+        *:after {
             box-sizing: inherit;
         }
-        body
-        {
-            margin:0;
+
+        body {
+            margin: 0;
             background: #fafafa;
         }
     </style>
 </head>
 <body>
 <div id="swagger-ui"></div>
-<script src="https://petstore.swagger.io/swagger-ui-bundle.js"> </script>
-<script src="https://petstore.swagger.io/swagger-ui-standalone-preset.js"> </script>
+<script src="https://petstore.swagger.io/swagger-ui-bundle.js"></script>
+<script src="https://petstore.swagger.io/swagger-ui-standalone-preset.js"></script>
 <script>
-    window.onload = function() {
+    window.onload = function () {
         // Begin Swagger UI call region
         const ui = SwaggerUIBundle({
             "dom_id": "#swagger-ui",
